# redesigned-octo-doodle

./: README.md  pyproject.toml
frontend/: package.json  svelte.config.js  swa-cli.config.json
frontend/src/routes/: +page.svelte
src/octo_doodle/: main.py
tests/: test_cli.py
weather/: api.py  main.py  models.py  utils.py
weather/nominatim/: api.py
