[project]
name = "octo-doodle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
